--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=AutoConnect
-spring.datasource.url=jdbc:mysql://localhost:3306/${AutoConnect}?createDatabaseIfNotExist=true
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/AutoConnect?createDatabaseIfNotExist=true
+spring.datasource.username=alexuser
+spring.datasource.password=Alst631014Lu!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 spring.jpa.hibernate.ddl-auto=update
 
 spring.sql.init.mode=always
