--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=AutoConnect
-spring.datasource.url=jdbc:mysql://localhost:3306/AutoConnect?createDatabaseIfNotExist=true
-spring.datasource.username=alexuser
-spring.datasource.password=Alst631014Lu!
+spring.datasource.url=jdbc:mysql://localhost:3306/${DB_URL}?createDatabaseIfNotExist=true
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password= ${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
