--- a/.envsample
+++ b/.envsample
@@ -1,3 +1,3 @@
-DB_URL=              // met juste le nom de la data base pas besion de la crée si elle et pas créé
+DB_URL=              // met juste le nom de la data base pas besoin de la crée si elle et pas créé
 DB_USERNAME=
 DB_PASSWORD=
