--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.sql.init.mode=always
 logging.level.org.springframework.jdbc.core=DEBUG
+logging.level.org.springframework.jdbc.security=DEBUG
