--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password= ${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
+spring.jpa.defer-datasource-initialization=true
 
 spring.jpa.hibernate.ddl-auto=update
+
 
 spring.sql.init.mode=always
 logging.level.org.springframework.jdbc.core=DEBUG
