--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.defer-datasource-initialization=true
 siren.api.key=${APIKEY_CARAPI}
+spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Paris
 
 spring.jpa.hibernate.ddl-auto=update
 
